--- a/Surge.conf
+++ b/Surge.conf
@@ -50,17 +50,17 @@ udp-policy-not-supported-behaviour = reject
 
 [Proxy Group]
 # > 策略组（下面的节点信息需与外部节点对应，若删除了外部节点里的节点，那么在策略组里也要删除。）
-Node selection = select, jydd, no-alert=0, hidden=0, include-all-proxies=0
+Node selection = select, HK, no-alert=0, hidden=0, include-all-proxies=0
 Telegram = select, Node selection, no-alert=0, hidden=0, include-all-proxies=0
-Netflix = select, jydd, no-alert=0, hidden=0, include-all-proxies=0
-Disney = select, jydd, no-alert=0, hidden=0, include-all-proxies=0
-Youtube = select, jydd, no-alert=0, hidden=0, include-all-proxies=0
-Bilibili = select, jydd, no-alert=0, hidden=0, include-all-proxies=0
+Netflix = select, HK, no-alert=0, hidden=0, include-all-proxies=0
+Disney = select, HK, no-alert=0, hidden=0, include-all-proxies=0
+Youtube = select, HK, no-alert=0, hidden=0, include-all-proxies=0
+Bilibili = select, HK, no-alert=0, hidden=0, include-all-proxies=0
 Foreign media = select, Node selection, no-alert=0, hidden=0, include-all-proxies=0
 OpenAI = select, Node selection
 Microsoft = select, 全球直连, Node selection, no-alert=0, hidden=0, include-all-proxies=0
 Apple = select, 全球直连, no-alert=0, hidden=0, include-all-proxies=0
-Games = select, DIRECT, jydd, no-alert=0, hidden=0, include-all-proxies=0
+Games = select, DIRECT, HK, no-alert=0, hidden=0, include-all-proxies=0
 # > 外部节点
 
 jydd = select, policy-path=https://99dy.euquw.cn/api/v1/client/subscribe?token=597e67cb8008e979d1db2ccbe6b7b795, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
