--- a/Surge.conf
+++ b/Surge.conf
@@ -50,22 +50,26 @@ udp-policy-not-supported-behaviour = reject
 
 [Proxy Group]
 # > 策略组（下面的节点信息需与外部节点对应，若删除了外部节点里的节点，那么在策略组里也要删除。）
-Node selection = select, HK, no-alert=0, hidden=0, include-all-proxies=0
-Telegram = select, Node selection, no-alert=0, hidden=0, include-all-proxies=0
-Netflix = select, HK, no-alert=0, hidden=0, include-all-proxies=0
-Disney = select, HK, no-alert=0, hidden=0, include-all-proxies=0
-Youtube = select, HK, no-alert=0, hidden=0, include-all-proxies=0
-Bilibili = select, HK, no-alert=0, hidden=0, include-all-proxies=0
-Foreign media = select, Node selection, no-alert=0, hidden=0, include-all-proxies=0
-OpenAI = select, Node selection
-Microsoft = select, 全球直连, Node selection, no-alert=0, hidden=0, include-all-proxies=0
-Apple = select, 全球直连, no-alert=0, hidden=0, include-all-proxies=0
-Games = select, DIRECT, HK, no-alert=0, hidden=0, include-all-proxies=0
+Node selection = select, DIRECT, 我的节点1, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="我的节点1, 我的节点2"
+Telegram = select, Node selection, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="我的节点1, 我的节点2"
+Netflix = select, DIRECT, 我的节点1, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="我的节点1, 我的节点2"
+Disney = select, 我的节点1, 我的节点2, no-alert=0, hidden=0, include-all-proxies=1, include-other-group="我的节点1, 我的节点2"
+Youtube = select, DIRECT, 我的节点1, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="我的节点1, 我的节点2"
+Bilibili = select, DIRECT, 我的节点1, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="我的节点1, 我的节点2"
+Foreign media = select, DIRECT, Node selection, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="我的节点1, 我的节点2"
+OpenAI = select, DIRECT, Node selection, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="我的节点1, 我的节点2"
+Microsoft = select, 全球直连, Node selection, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="我的节点1, 我的节点2"
+Apple = select, 全球直连, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="我的节点1, 我的节点2"
+Games = select, DIRECT, 我的节点1, no-alert=0, hidden=0, include-all-proxies=0
 # > 外部节点
+香港 = select, DIRECT, policy-regex-filter=香港, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="我的节点1, 我的节点2"
 
-jydd = select, policy-path=https://99dy.euquw.cn/api/v1/client/subscribe?token=597e67cb8008e979d1db2ccbe6b7b795, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
 
-flyingbird = select, policy-path=https://fba01.fbsubcn01.cc:2096/flydsubal/ncaim94itfouymuc?surge=4, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
+国外流量 = select, update-interval=0, no-alert=0, hidden=0, include-all-proxies=1
+
+我的节点1 = select, policy-path=https://99dy.euquw.cn/api/v1/client/subscribe?token=597e67cb8008e979d1db2ccbe6b7b795, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
+
+我的节点2 = select, policy-path=https://fba01.fbsubcn01.cc:2096/flydsubal/ncaim94itfouymuc?surge=4, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
 
 [Rule]
 # > Anti-AD
@@ -91,7 +95,6 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Disney/Disney.list,Disney
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list,Bilibili
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMedia/ChinaMedia.list,全球直连
-RULE-SET,https://raw.githubusercontent.com/imzxlya/surge-rules/refs/heads/main/rules.txt,全球直连
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_All_No_Resolve.list,Foreign media
 # > Proxy
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Proxy/Proxy_All_No_Resolve.list,Node selection,extended-matching
